--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
   "dependencies": {
     "@supercharge/strings": "^1.18.0",
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "jbuilder": "0.0.5",
     "joi": "^17.4.0",
+    "jsonwebtoken": "^8.5.1",
     "link-module-alias": "^1.2.0",
     "mongoose": "^5.12.9",
     "mongoose-paginate": "^5.0.3",
@@ -38,7 +41,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-json": "~2.1.1",
     "eslint-plugin-prettier": "~3.1.3",
-    "nodemon": "^2.0.16",
+    "nodemon": "^2.0.15",
     "prettier": "~2.0.4"
   }
 }
