--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1",
+    "express": "^4.18.1",
     "express-fileupload": "^1.2.1",
     "jbuilder": "0.0.5",
     "joi": "^17.4.0",
@@ -25,7 +25,8 @@
     "mongoose-paginate": "^5.0.3",
     "njwt": "^1.0.0",
     "pg": "^8.7.3",
-    "pg-format": "^1.0.4"
+    "pg-format": "^1.0.4",
+    "socket.io": "^4.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
@@ -40,5 +41,14 @@
     "eslint-plugin-prettier": "~3.1.3",
     "nodemon": "^2.0.16",
     "prettier": "~2.0.4"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sameer-19/buylend-backend.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/sameer-19/buylend-backend/issues"
+  },
+  "homepage": "https://github.com/sameer-19/buylend-backend#readme"
 }
